[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/walla_2.png" type="Texture" id=1]
[ext_resource path="res://script/Wall1.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 421 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 143 )

[node name="Wall1" type="KinematicBody2D"]
position = Vector2( 610, 810 )
z_index = -18
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.878431, 0.878431, 0.878431, 1 )
position = Vector2( 25, 0 )
texture = ExtResource( 1 )

[node name="Deadly" type="Area2D" parent="." groups=[
"wall",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deadly"]
position = Vector2( 26, -570 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Deadly"]
position = Vector2( 26, 569 )
shape = SubResource( 1 )

[node name="NotDeadly" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NotDeadly"]
position = Vector2( 47, 0 )
shape = SubResource( 2 )

[node name="TimerDead" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="area_entered" from="Deadly" to="." method="_on_Deadly_area_entered"]
[connection signal="area_exited" from="NotDeadly" to="." method="_on_NotDeadly_area_exited"]
[connection signal="timeout" from="TimerDead" to="." method="_on_TimerDead_timeout"]
